<resources>
    <string name="app_name">Interval Timer</string>
    <string name="hours_placeholder">HH</string>
    <string name="colon_symbol">:</string>
    <string name="minutes_placeholder">MM</string>
    <string name="seconds_placeholder">SS</string>
    <string name="start_string">Start</string>
    <string name="save_string">Save</string>
    <string name="timer_string">Timer</string>
    <string name="break_string">Break</string>
    <string name="work_string">Work</string>
    <string name="loop_string">Loop = </string>
    <string name="pound_sign_string">##</string>
    <string name="reset_string">Reset</string>
    <string name="pause_string">Pause</string>
    <string name="resume_string">Resume</string>
    <string name="loops_left_running_string">Loops left = </string>
    <string name="reset_text_view_string">Hold Reset button to reset all values.</string>
</resources>
